2008-06-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (${SUBDIR}): Pass additional BOOTSTRAPEMACS argument.

2008-06-22  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (top_bootclean): Remove obsolete references to lock/.

2008-06-21  Romain Francoise  <romain@orebokech.com>

	* Makefile.in (INFO_FILES): Add sasl.

2008-06-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (maybe_bootstrap, src/bootstrap-emacs${EXEEXT})
	(bootstrap-build): Remove.
	(top_bootclean): New var.
	(top_distclean, bootstrap-clean): Use it.
	(bootstrap): Don't recheck config.  Make normally.

2008-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (SUBDIR): Include `lisp'.
	(lisp): Depend on `src'.
	(top_distclean): Don't remove config.status.
	(bootstrap-clean): New target.
	(maintainer-clean): Use it.
	(bootstrap): Use bootstrap-clean.  Re-run config.status.
	(src/bootstrap-emacs${EXEEXT}): New target.
	(bootstrap-build): Use it.  Don't use bootstrap-prepare because
	src/Makefile now takes care of it.
	(bootfast, bootstrap-clean-before, bootstrap-clean-before-fast): Remove.

2008-06-15  Glenn Morris  <rgm@gnu.org>

	* info/dir: Add sasl.

2008-06-09  Alan Mackenzie  <acm@muc.de>

	* INSTALL.CVS: Clarify why `make bootstrap' sometimes fails.

2008-06-08  Eric S. Raymond  <esr@snark.thyrsus.com>

	* INSTALL.CVS: Indicate when "cvs update -d" may be needed.

2008-06-07  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (bootstrap-build): Remove mostlyclean, since it seems to
	serve no purpose.

2008-06-01  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (USE_LUCID, USE_MOTIF): Don't use "==".
	* configure: Regenerate.

2008-05-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* update-subdirs: Don't touch subdirs.el if it is unchanged.

2008-05-14  Kenichi Handa  <handa@m17n.org>

	* configure: Regenerate.

	* configure.in: Don't handle --disable-font-backend.  Don't print
	a message about a font backend.

2008-05-09  Glenn Morris  <rgm@gnu.org>
