@@ -1,3 +1,15 @@
+2008-06-25  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* Makefile.in (Makefile): Use it for its timestamp value as well, and
+	make it depend on all other */.in files.
+	(src/Makefile, src/config.stamp, lib-src/Makefile)
+	(doc/emacs/Makefile, doc/misc/Makefile, doc/lispref/Makefile)
+	(doc/lispintro/Makefile, oldXMenu/Makefile, lwlib/Makefile)
+	(leim/Makefile, lisp/Makefile): Remove those overlapping targets.
+	(leim, ${SUBDIR}, blessmail): Only depend on Makefile now.
+
+	* configure.in: Don't create src/config.stamp any more.
+
 2008-06-22  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* Makefile.in (${SUBDIR}): Pass additional BOOTSTRAPEMACS argument.
